2002-07-31  Duncan Mak  <duncan@ximian.com>

	* unix.args: Added new Exceptions, Interfaces and various
	TypeEntries from System.Runtime.Remoting.

2002-07-29  Martin Baulig  <martin@gnome.org>

	* list: Removed, this isn't used anymore and people are already
	getting confused which file to use.

2002-07-24  Duncan Mak  <duncan@ximian.com>

	* unix.args: Added files from Remoting.Lifetime and
	Remoting.Metadata.

	* ChangeLog: Moved entries from System.Runtime.Remoting.Activation
	and System.Runtime.Remoting.Proxies to their own ChangeLog.

2002-07-23  Duncan Mak  <duncan@ximian.com>

	* list: 
	* unix.args: Added new Attributes in
	System.Runtime.CompilerServices and System.Runtime.Remoting.Messaging.

2002-07-22  Tim Coleman <tim@timcoleman.com>
	* list:
	* unix.args:
		Added System.Security.Permission/ReflectionPermission.cs and
		System.Security.Permission/EnvironmentPermission.cs and

2002-07-10  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* list:
	* unix.args: added IObjectHandle.cs.

2002-06-20  Martin Baulig  <martin@gnome.org>

	* unix.args: New file.  This is a mcs response file to compile
	corlib on GNU/Linux (which doesn't work yet).

2002-04-30  Daniel Stodden  <stodden@in.tum.de>

	* System/Delegate.cs: Implemented Remove()
	* System/MulticastDelegate.cs: Implementation of RemoveImpl()
	done. Plus a fix for Equals().
	* Test/System/MulticastDelegate.cs: Added. Should reflect above
	changes.
	
2002-04-27  Martin Baulig  <martin@gnome.org>

	* corlib.build: Added new "mcs-build" target to compile corlib
	with mcs. This doesn't work yet - it's just to test mcs to find
	and fix the remaining bugs.

2002-03-27  Dan Lewis  <dihlewis@yahoo.co.uk>

	* corlib.build: removed seperate windows/linux builds. excluded
	wrapper and PAL classes from all builds.

2002-03-03  Nick Drochak  <ndrochak@gol.com>

	* corlib.build: Exclude a bunch of interfaces from corlib_res.dll
	that were preventing the tests from running on Windows.
