@@ -1,0 +1,25 @@
+//
+// System.Runtime.Remoting.Contexts.ContextProperty..cs
+//
+// Author: Duncan Mak  (duncan@ximian.com)
+//
+// (C) Ximian, Inc.  http://www.ximian.com
+//
+
+using System;
+
+namespace System.Runtime.Remoting.Contexts {
+
+	public class ContextProperty
+	{
+		[MonoTODO]
+		public virtual string Name {
+			get { throw new NotImplementedException (); }
+		}
+
+		[MonoTODO]
+		public virtual object Property {
+			get { throw new NotImplementedException (); }
+		}
+	}
+}
