@@ -1,0 +1,13 @@
+//
+// System.Runtime.Remoting.Contexts.CrossContextDelegate.cs
+//
+// Author: Duncan Mak  (duncan@ximian.com)
+//
+// 2002 (C) Copyright, Ximian, Inc.
+//
+
+namespace System.Runtime.Remoting.Contexts {
+
+	[Serializable]
+	public delegate void CrossContextDelegate ();
+}
